# webrtc-ros-bridge

./: .gitignore  Makefile  README.md  example_autoware_receiver.json  example_autoware_sender.json  generate.go  go.mod  go.sum  main.go
.cursor/rules/: chinese.mdc
.github/workflows/: test.yml
codec_channel/: codec_channel.go
config/: config.go  config_test.go
consts/: consts.go
docs/: adaptive_bandwidth_management.md  autoware_awsim_bridge_plan.md  autoware_awsim_topics.md  implementation_plan.md  thesis_outline.md
docs/memory_bank/: activeContext.md  productContext.md  progress.md  rules.md  systemPatterns.md  techContext.md
peer_connection_channel/: peer_connection_channel.go  vp8_decoder.c  vp8_decoder.h  webm_saver.go
rclgo_ws/src/: CMakeLists.txt  package.xml
receiver/: known_issues.md
receiver/peer_connection_channel/: peer_connection_channel.go  vp8_decoder.c  vp8_decoder.h  webm_saver.go
receiver/ros_channel/: ros_channel.go
receiver/signaling_channel/: signaling_channel.go
ros_channel/: ros_channel.go
ros_mediadevices_adapter/: ros_mediadevices_adapter.go
scripts/: filter-root-path.sh  generate_autoware_interfaces.sh  generate_interfaces.sh  install_autoware_packages.sh
sender/bandwidth_manager/: bandwidth_manager.go
sender/peer_connection_channel/: peer_connection_channel.go  peer_connection_channel_test.go  vp8_encoder.c  vp8_encoder.h
sender/ros_channel/: ros_channel.go
sender/signaling_channel/: signaling_channel.go
signaling_channel/: signaling_channel.go
test/: test_config.go
test/config/: config_test.go
